JDK 17, assertJ update, assertThat#nisNotEqual changes?